--- a/CWM_Models.Rmd
+++ b/CWM_Models.Rmd
@@ -117,6 +117,7 @@ cwm_traits_adj <- cwm_traits_adj %>%
     - No difference between Int Total and Mesic Total
 - No differences between Open or Partial Treatments across climates
 
+
 ```{r}
 # Best fit model:
 LA_CWM <- glm(data = cwm_traits_adj, weighted_la ~ climate * treatment, family = gaussian, na.action = na.fail)
@@ -150,6 +151,41 @@ emmeans(LA_CWM, pairwise ~ climate * treatment)
 - Other significant difference:
     - Arid Open > Mesic Open
 
+
+```{r}
+# Best fit model:
+LA_CWM <- glm(data = cwm_traits_adj, weighted_la ~ climate * treatment, family = gaussian, na.action = na.fail)
+LA_CWM <- glmmTMB(data = cwm_traits_adj, weighted_la ~ climate * treatment, family = gaussian)
+dredge(LA_CWM) #best model: weighted_la ~ climate * treatment
+
+# Checking data
+(simulateResiduals(LA_CWM, plot= T)) #What is the red asterisk on the model predictions graph?
+(shapiro.test(residuals(LA_CWM))) #normal
+
+# Model summaries
+LA_sig_pairs <-  as.data.frame(pairs(emmeans(LA_CWM, ~climate * treatment))) %>% 
+  filter(p.value <= 0.05)
+
+emmeans(LA_CWM, pairwise ~ climate * treatment)
+
+```
+
+
+#### b. SLA CWM
+
+- Once again, Arid Total larger than almost all other treatments
+- Arid trends:
+    - Arid Total larger than Arid Open and Arid Partial
+    - No significant difference between Arid Total & Partial
+- No different between Intermediate herbivore treatments
+- No difference between Mesic herbivore treatments
+- For Total exclosures, almost follows Arid > Int > Mesic
+    - Arid Total > Mesic Total
+    - Arid Total > Int total (almost significant, p=0.0546)
+    - Int Total > Mesic Total
+- Other significant difference:
+    - Arid Open > Mesic Open
+
 ```{r}
 # best fit model
 SLA_CWM <- glmmTMB(data = cwm_traits_adj, weighted_sla ~ climate * treatment, family = gaussian) 
@@ -160,20 +196,18 @@ dredge(SLA_CWM) #best model: weighted_sla ~ climate * treatment
 simulateResiduals(SLA_CWM, plot= T) #looks good
 shapiro.test(residuals(SLA_CWM)) #normal
 
-# model summary
-summary(SLA_CWM)
-
 SLA_sig_pairs <- as.data.frame(pairs(emmeans(SLA_CWM, ~climate * treatment)))%>% 
   filter(p.value <= 0.05)
-SLA_sig_pairs
 
-emmeans(SLA_CWM, pairwise ~ climate * treatment)
+# emmeans(SLA_CWM, pairwise ~ climate * treatment)
+emmeans(SLA_CWM, pairwise ~ climate | treatment)
 
 # plot(pairs(emmeans(SLA_CWM, ~climate * treatment))) +
 #   theme_bw(base_size = 18) +
 #   geom_vline(xintercept=0, size=2, color="red")
 
 ```
+
 
 #### c. LDMC CWM
 
@@ -209,6 +243,19 @@ LDMC_CWM <- glmmTMB(data = cwm_traits_adj, weighted_ldmc ~ climate * treatment, 
 dredge(LDMC_CWM) #best model: weighted_ldmc ~ climate + treatment
 LDMC_CWM <- glmmTMB(data = cwm_traits_adj, weighted_ldmc ~ climate + treatment, family = gaussian) 
 
+
+simulateResiduals(LDMC_CWM, plot= T) #looks good
+shapiro.test(residuals(LDMC_CWM)) #normal
+
+LDMC_sig_pairs <- as.data.frame(pairs(emmeans(LDMC_CWM, ~climate + treatment))) %>% 
+  filter(p.value <= 0.05)
+
+emmeans(LDMC_CWM, pairwise ~ climate)
+emmeans(LDMC_CWM, pairwise ~ treatment)
+# emmeans(LDMC_CWM, pairwise ~ climate + treatment)
+emmeans(LDMC_CWM, pairwise ~ climate | treatment)
+
+
 simulateResiduals(LDMC_CWM, plot= T) #looks good
 shapiro.test(residuals(LDMC_CWM)) #normal
 
@@ -223,6 +270,7 @@ emmeans(LDMC_CWM, pairwise ~ climate)
 emmeans(LDMC_CWM, pairwise ~ treatment)
 
 emmeans(LDMC_CWM, pairwise ~ climate + treatment)
+
 
 ```
 
@@ -256,6 +304,7 @@ emmeans(LDMC_CWM, pairwise ~ climate + treatment)
 seed_mass_CWM <- glmmTMB(data = cwm_traits_adj, weighted_seed_mass ~ climate * treatment, family = gaussian)
 dredge(seed_mass_CWM) #best model: weighted_seed_mass ~ cliamte + treatment
 seed_mass_CWM <- glmmTMB(data = cwm_traits_adj, weighted_seed_mass ~ climate + treatment, family = gaussian)
+
 
 simulateResiduals(seed_mass_CWM, plot= T) #model predictions look a little wonky, but it says it's good.  I'm also getting something saying that "outer Newton did not converge fully?
 shapiro.test(residuals(seed_mass_CWM)) # not normal
@@ -304,6 +353,54 @@ leaf_n_CWM <- glmmTMB(data = cwm_traits_adj, weighted_n ~ climate * treatment, f
 dredge(leaf_n_CWM) #best model: weighted_n ~ climate + treatment
 leaf_n_CWM <- glmmTMB(data = cwm_traits_adj, weighted_n ~ climate + treatment, family = gaussian) 
 
+
+simulateResiduals(seed_mass_CWM, plot= T) #model predictions look a little wonky, but it says it's good.  I'm also getting something saying that "outer Newton did not converge fully?
+shapiro.test(residuals(seed_mass_CWM)) # not normal
+
+# log transformation
+log_seed_mass <- glmmTMB(data = cwm_traits_adj, log_seed_mass ~ climate * treatment, family = gaussian)
+dredge(log_seed_mass) #best model: weighted_seed_mass ~ cliamte + treatment
+log_seed_mass <- glmmTMB(data = cwm_traits_adj, log_seed_mass ~ climate + treatment, family = gaussian)
+
+simulateResiduals(log_seed_mass, plot= T) #looks ok
+shapiro.test(residuals(log_seed_mass)) #normal
+
+seed_sig_pairs <-  as.data.frame(pairs(emmeans(log_seed_mass, ~ climate + treatment))) %>% 
+  filter(p.value <= 0.05)
+
+# emmeans(log_seed_mass, pairwise ~ climate * treatment)
+emmeans(log_seed_mass, pairwise ~ climate | treatment)
+
+```
+
+
+#### e. Leaf-N CWM
+
+- No difference between any of the different herbivore treatments within climates
+- Same pattern observed between treatments at different climates
+
+- Arid:
+    - No difference between treatments at Arid
+- Int:
+     - No difference between  treatments at Int
+- Mesic:
+    - No difference between treatments at Mesic
+- Open:
+    - Arid-Open > Mesic-Open
+    - Int-Open > Mesic-Open
+- Partial:
+    - Arid-Partial > Mesic-Partial
+    - Int-Partial > Mesic-Partial
+- Total:
+    - Arid-Total > Mesic-Total
+    - Int-Total > Mesic-Total
+
+
+```{r} 
+leaf_n_CWM <- glmmTMB(data = cwm_traits_adj, weighted_n ~ climate * treatment, family = gaussian) 
+dredge(leaf_n_CWM) #best model: weighted_n ~ climate + treatment
+leaf_n_CWM <- glmmTMB(data = cwm_traits_adj, weighted_n ~ climate + treatment, family = gaussian) 
+
 simulateResiduals(leaf_n_CWM, plot= T) #looks bad
 shapiro.test(residuals(leaf_n_CWM)) #not normal
 
@@ -316,14 +413,13 @@ simulateResiduals(log_n_CWM, plot= T) #doesn't look very good
 shapiro.test(residuals(log_n_CWM)) #p = 0.05924
 
 # Model summary
-summary(log_n_CWM)
 emmeans(log_n_CWM, ~climate + treatment)
 LNC_pairs <-  as.data.frame(pairs(emmeans(log_n_CWM, ~ climate + treatment)))
 LNC_sig_pairs <- LNC_pairs %>% 
   filter(p.value <= 0.05)
-LNC_sig_pairs
 
-emmeans(log_n_CWM, pairwise ~ climate + treatment)
+# emmeans(log_n_CWM, pairwise ~ climate + treatment)
+emmeans(log_n_CWM, pairwise ~ climate | treatment)
 ```
 
 ### Functional Groups
@@ -364,8 +460,8 @@ simulateResiduals(grass_glm, plot= T) #good
 shapiro.test(residuals(grass_glm)) #normal
 
 summary(grass_glm)
-emmeans(grass_glm, pairwise ~ climate + treatment)
-
+# emmeans(grass_glm, pairwise ~ climate * treatment)
+emmeans(grass_glm, pairwise ~ climate | treatment)
 ```
 
 #### b. forbs
